--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     background-size: cover;
  }   
  .boton {
-    display: block;
+    display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
@@ -70,7 +70,7 @@ body {
     border: solid 1px;
     margin-top: 5%;
     margin-bottom: 10%;
-    background-color: rgba(240, 240, 210, 0.5);
+    background-color: rgba(230, 230, 250, 0.7);
     font-family: 'Bebas Neue', cursiva;
     line-height: 40px;
 }
@@ -78,7 +78,7 @@ body {
 .informacion-index {
     list-style: none;
     border: solid 1px;
-    background-color: rgba(240, 240, 210, 0.5);
+    background-color: rgba(240, 230, 140, 0.5);
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 50px;
     font-size: 1.5rem;
@@ -88,8 +88,11 @@ body {
 .eslogan {
     margin-top: 20%;
     margin-bottom: 10%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Bebas Neue', cursiva;
+    font-weight: bold;
     color: black;
+    background-color: rgba(230, 230, 250, 0.7);
+    padding: 10px;
 }
 .dweb {
     font-family: 'Nuosu SIL', serif;
