--- a/css/style.css
+++ b/css/style.css
@@ -7,34 +7,35 @@ header {
     margin-bottom: 5%;
 }
 .header .navbar {
-    background-color: rgba(176, 224, 230, 0.8) !important;
+    background-color: rgba(255, 250, 240, 0.4) !important;
     color: black !important;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
+    font-size: 1.5rem;
+}
+a:hover {
+    transform: scale(1.2);
 }
 body {
     background-image: url(../imagenes/foto14.jpg);
     background-repeat: no-repeat;
     background-size: cover;
  }   
-.boton {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
+
+@media (max-width: 480px){
+.header .navbar {
+    font-size: 1rem;
+    font-weight: 300;
+}
 }
 
-.redes {
-    font-size: 1.2rem;
-    color: darkslategray;
-    padding: 5px;
-    width: 3%;
-    height: 10vh;
-}
-.redes:hover {
-    transform: scale(2);
-}
+h1 {
+    font-size: 2.5rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    background-color: beige;
 
+}
 /*-----------------------------------------index---------------------------------*/
 .portada {
     display: flex;
@@ -49,16 +50,19 @@ body {
 }
 .portada-p {
     color: black;
-    background-color: whitesmoke;
+    background-color: beige;
     font-family: 'Nuosu SIL', serif;
     font-weight: 400;
     padding: 10px;
+    font-size: 2rem;
 }
 .portada-h1 {
     color: black;
-    background-color: whitesmoke;
+    background-color: beige;
     font-family: 'Nuosu SIL', serif;
     padding: 10px;
+    font-size: 3rem;
+    transition-delay: 500ms;
 }
 @media (min-width:768px) {
     .portada {
@@ -76,35 +80,82 @@ body {
     }
 }
 .institucional {
-    border: solid 1px;
+    border: solid 1px darkslategrey;
+    border-radius: 5px;
     margin-top: 5%;
     margin-bottom: 10%;
     background-color: rgba(230, 230, 250, 0.7);
     font-family: 'Bebas Neue', cursiva;
+    font-size: 1.2rem;
     line-height: 40px;
 }
 
 .informacion-index {
     border: solid 1px grey;
-    background-color: rgba(240, 230, 140, 0.5);
+    border-radius: 5px;
+    background-color: whitesmoke;
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 50px;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    list-style: none;
+}
+
+.ubicacion-titulo {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 2rem;
+    margin-top: 5%;
+}
+.infoh3 {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 2rem;
+    margin-top: 5%;
+}
+
+@media (max-width: 480px){
+    .ubicacion-titulo {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 1rem;
+        margin-top: 2%;  
+        font-weight: 600;
+    }
+    .infoh3 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 1rem;
+        font-weight: 600;
+        margin-top: 5%;
+    }
+    .informacion-index {
+        text-align: center;
+    }
 }
 /*---------------------------------footer-----------------------------------*/
 
 .eslogan {
     margin-top: 20%;
     margin-bottom: 10%;
-    font-family: 'Bebas Neue', cursiva;
-    color: black;
-    background-color: rgba(230, 230, 250, 0.7);
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    color: darkslategrey;
+    background-color: rgba(0, 139, 139, 0.3);
     padding: 10px;
 }
 .dweb {
     font-family: 'Nuosu SIL', serif;
-    color:black
+    font-weight: 600;
+    color:black;
+    font-style: italic;
 }
+@media (max-width:480px) {
+.eslogan {
+    font-size: 1rem;
+}
+}
+@media (max-width:768px){
+    .eslogan {
+        font-size: 1rem;
+    }
+    }
 /*---------------------------------staff medico----------------------------*/
 
 .staffmedico-name {
@@ -163,4 +214,22 @@ body {
 }
 .info3 {
     font-weight: bold;
+}
+.boton{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color: darkgreen;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.mi-boton{
+	margin-top:16px;
 }
