--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     font-size: 1.5rem;
+    letter-spacing: 0.3px;
 }
 a:hover {
     transform: scale(1.2);
@@ -35,6 +36,7 @@ h1 {
     font-weight: 600;
     background-color: beige;
 
+
 }
 /*-----------------------------------------index---------------------------------*/
 .portada {
@@ -54,7 +56,7 @@ h1 {
     font-family: 'Nuosu SIL', serif;
     font-weight: 400;
     padding: 10px;
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 .portada-h1 {
     color: black;
@@ -62,8 +64,16 @@ h1 {
     font-family: 'Nuosu SIL', serif;
     padding: 10px;
     font-size: 3rem;
-    transition-delay: 500ms;
 }
+@media (max-width:767px) {
+    .portada-h1 {
+        font-size: 1.4rem;
+    }
+    .portada-p {
+        font-size: 1.1rem;
+    }
+} 
+
 @media (min-width:768px) {
     .portada {
         width: 100%;
@@ -134,7 +144,7 @@ h1 {
     margin-top: 20%;
     margin-bottom: 10%;
     font-family: 'Lato', sans-serif;
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: 600;
     color: darkslategrey;
     background-color: rgba(0, 139, 139, 0.3);
@@ -158,45 +168,76 @@ h1 {
     }
 /*---------------------------------staff medico----------------------------*/
 
+.staff {
+    margin-top: 10%;
+}
+
 .staffmedico-name {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+    font-size: 1.5rem;
 }
 .staffmedico-p {
     font-family: 'Bebas Neue', cursiva;
     font-style: italic;
     margin-bottom: 5%;  
+    font-size: 1.3rem;
 }
 .foto {
     width: auto;
-    height: 40vh;
+    height: 30vh;
+}
+.especialidades-titulo {
+margin-top: 10%;
+margin-bottom: 5%;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-weight: 600;
+}
 
+@media (max-width: 480px) {
+    .staff {
+        margin-top: 5%;
+    }
+    .staffmedico-name {
+        font-size: 1.2rem;
+    }
+    .staffmedico-p {
+        font-size: 1rem;
+    }
 }
 
 /*------------------------------------estudios medicos------------------*/
 
 .estudios {
+    margin-top: 5%;
+}
+.estudios-ul {
     list-style: none;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.2rem;
 }
 /*--------------------------------------cobertura medica---------------------------*/
 
-.prepagas {
+.lista {
     list-style: none;
-}
-
-@media (min-width: 768px) {
-.prepagas {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10(fr);
-    font-family: 'Nuosu SIL', serif;
     font-size: 1.5rem;
+    font-family:'Source Sans Pro', sans-serif;
     margin-top: 5%;
-}
-}
+    }
+
 
 /*--------------------------------------contacto--------------------------*/
-
+.form {
+    background-color: beige;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border: solid 2px white;
+    border-radius: 5px;
+}
+.form-p {
+    font-size: 1.2rem;
+    margin-top: 5%;
+}
 .info {
     list-style: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -209,12 +250,23 @@ h1 {
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 45px;
     border: solid 1px;
+    border-radius: 5px;
     background-color: rgba(240, 230, 140, 0.5);
     color: darkslategrey;
 }
 .info3 {
     font-weight: bold;
 }
+.btn {
+    background-color: darkslategray;
+    color: white;
+}
+.btn:hover {
+    background-color:cornflowerblue;
+    color: white;
+}
+
+/*-------------------------------boton de whatsapp------------------------------------*/
 .boton{
 	position:fixed;
 	width:60px;
@@ -225,11 +277,43 @@ h1 {
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
-  font-size:30px;
+    font-size:30px;
 	box-shadow: 2px 2px 3px #999;
-  z-index:100;
+    z-index:100;
 }
 
 .mi-boton{
 	margin-top:16px;
 }
+.portada-h1, .portada-p {
+    animation-duration: 6s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+ h1 {
+    animation-duration: 2s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
