--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-image: url(../imagenes/foto14.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 header {
     margin-bottom: 5%;
 }
+
 .header .navbar {
     background-color: rgba(255, 250, 240, 0.4) !important;
     color: black !important;
@@ -13,21 +21,19 @@ header {
     font-weight: 400;
     font-size: 1.5rem;
     letter-spacing: 0.3px;
+    padding: 20px;
 }
-a:hover {
-    transform: scale(1.2);
-}
-body {
-    background-image: url(../imagenes/foto14.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
- }   
 
-@media (max-width: 480px){
-.header .navbar {
-    font-size: 1rem;
-    font-weight: 300;
+a:hover {
+    transform: scale(1.1);
 }
+
+/*----------------------------------------media queries navbar-----------------------*/
+@media (max-width: 480px) {
+    .header .navbar {
+        font-size: 1rem;
+        font-weight: 300;
+    }
 }
 
 h1 {
@@ -35,10 +41,69 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     background-color: beige;
-
-
 }
+
+
+/*---------------------------------footer-----------------------------------*/
+
+.eslogan {
+    margin-top: 20%;
+    margin-bottom: 5%;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: darkslategrey;
+    background-color: rgba(0, 139, 139, 0.3);
+    padding: 10px;
+}
+
+.dweb {
+    font-family: 'Nuosu SIL', serif;
+    font-weight: 600;
+    color: black;
+    font-style: italic;
+}
+
+@media (max-width:480px) {
+    .eslogan {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:768px) {
+    .eslogan {
+        font-size: 1rem;
+    }
+}
+
+/*-------------------------------boton de whatsapp------------------------------------*/
+.boton {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: darkgreen;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+.mi-boton {
+    margin-top: 16px;
+}
+
+/*-------------animacion de h1---------------*/
+h1 {
+    animation-duration: 2s;
+    animation-name: slidein;
+}
+
 /*-----------------------------------------index---------------------------------*/
+
 .portada {
     display: flex;
     flex-direction: column;
@@ -50,6 +115,7 @@ h1 {
     width: 100%;
     height: 50vh
 }
+
 .portada-p {
     color: black;
     background-color: beige;
@@ -58,6 +124,7 @@ h1 {
     padding: 10px;
     font-size: 1.8rem;
 }
+
 .portada-h1 {
     color: black;
     background-color: beige;
@@ -65,14 +132,16 @@ h1 {
     padding: 10px;
     font-size: 3rem;
 }
+
 @media (max-width:767px) {
     .portada-h1 {
         font-size: 1.4rem;
     }
+
     .portada-p {
         font-size: 1.1rem;
     }
-} 
+}
 
 @media (min-width:768px) {
     .portada {
@@ -89,6 +158,40 @@ h1 {
         background-size: cover;
     }
 }
+/*---------animacion de portada-----------------*/
+
+.portada-h1,
+.portada-p {
+    animation-duration: 6s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
+}
+
+/*------------------------------------------------------------------------------*/
+
 .institucional {
     border: solid 1px darkslategrey;
     border-radius: 5px;
@@ -115,57 +218,33 @@ h1 {
     font-size: 2rem;
     margin-top: 5%;
 }
+
 .infoh3 {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 2rem;
     margin-top: 5%;
 }
 
-@media (max-width: 480px){
+@media (max-width: 480px) {
     .ubicacion-titulo {
         font-family: 'Source Sans Pro', sans-serif;
         font-size: 1rem;
-        margin-top: 2%;  
+        margin-top: 2%;
         font-weight: 600;
     }
+
     .infoh3 {
         font-family: 'Source Sans Pro', sans-serif;
         font-size: 1rem;
         font-weight: 600;
         margin-top: 5%;
     }
+
     .informacion-index {
         text-align: center;
     }
 }
-/*---------------------------------footer-----------------------------------*/
 
-.eslogan {
-    margin-top: 20%;
-    margin-bottom: 10%;
-    font-family: 'Lato', sans-serif;
-    font-size: 1.7rem;
-    font-weight: 600;
-    color: darkslategrey;
-    background-color: rgba(0, 139, 139, 0.3);
-    padding: 10px;
-}
-.dweb {
-    font-family: 'Nuosu SIL', serif;
-    font-weight: 600;
-    color:black;
-    font-style: italic;
-}
-@media (max-width:480px) {
-.eslogan {
-    font-size: 1rem;
-}
-}
-@media (max-width:768px){
-    .eslogan {
-        font-size: 1rem;
-    }
-    }
 /*---------------------------------staff medico----------------------------*/
 
 .staff {
@@ -177,30 +256,35 @@ h1 {
     font-weight: 600;
     font-size: 1.5rem;
 }
+
 .staffmedico-p {
     font-family: 'Bebas Neue', cursiva;
     font-style: italic;
-    margin-bottom: 5%;  
+    margin-bottom: 5%;
     font-size: 1.3rem;
 }
+
 .foto {
     width: auto;
     height: 30vh;
 }
+
 .especialidades-titulo {
-margin-top: 10%;
-margin-bottom: 5%;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 600;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
 }
 
 @media (max-width: 480px) {
     .staff {
         margin-top: 5%;
     }
+
     .staffmedico-name {
         font-size: 1.2rem;
     }
+
     .staffmedico-p {
         font-size: 1rem;
     }
@@ -211,19 +295,21 @@ font-weight: 600;
 .estudios {
     margin-top: 5%;
 }
+
 .estudios-ul {
     list-style: none;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.2rem;
 }
+
 /*--------------------------------------cobertura medica---------------------------*/
 
 .lista {
     list-style: none;
     font-size: 1.5rem;
-    font-family:'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     margin-top: 5%;
-    }
+}
 
 
 /*--------------------------------------contacto--------------------------*/
@@ -234,10 +320,12 @@ font-weight: 600;
     border: solid 2px white;
     border-radius: 5px;
 }
+
 .form-p {
     font-size: 1.2rem;
     margin-top: 5%;
 }
+
 .info {
     list-style: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -245,6 +333,7 @@ font-weight: 600;
     font-style: italic;
     color: darkslategrey;
 }
+
 .info2 {
     list-style: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -254,66 +343,18 @@ font-weight: 600;
     background-color: rgba(240, 230, 140, 0.5);
     color: darkslategrey;
 }
+
 .info3 {
     font-weight: bold;
 }
+
 .btn {
     background-color: darkslategray;
     color: white;
 }
+/*-----------------animacion de boton formulario-----------*/
 .btn:hover {
-    background-color:cornflowerblue;
+    background-color: cornflowerblue;
     color: white;
 }
-
-/*-------------------------------boton de whatsapp------------------------------------*/
-.boton{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color: darkgreen;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-    font-size:30px;
-	box-shadow: 2px 2px 3px #999;
-    z-index:100;
-}
-
-.mi-boton{
-	margin-top:16px;
-}
-.portada-h1, .portada-p {
-    animation-duration: 6s;
-    animation-name: slidein;
-  }
-  
-  @keyframes slidein {
-    from {
-      margin-left: 100%;
-      width: 300%;
-    }
-  
-    to {
-      margin-left: 0%;
-      width: 100%;
-    }
-  }
- h1 {
-    animation-duration: 2s;
-    animation-name: slidein;
-  }
-  
-  @keyframes slidein {
-    from {
-      margin-left: 100%;
-      width: 300%;
-    }
-  
-    to {
-      margin-left: 0%;
-      width: 100%;
-    }
-  }
+/*------------------------------------------------------------------*/
