--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,12 @@ h1 {
     background-color: beige;
 }
 
+@media (max-width: 768px) {
+    h1 {
+    font-size: 1.5rem;
+}
+}
+
 
 /*---------------------------------footer-----------------------------------*/
 
@@ -311,6 +317,11 @@ h1 {
     margin-top: 5%;
 }
 
+@media (max-width: 768px) {
+    .lista {
+        font-size: 1.2rem;
+    }
+}
 
 /*--------------------------------------contacto--------------------------*/
 .form {
@@ -351,6 +362,12 @@ h1 {
 .btn {
     background-color: darkslategray;
     color: white;
+}
+
+@media (max-width: 768px){
+    .form-p {
+        font-size: 1rem;
+    }
 }
 /*-----------------animacion de boton formulario-----------*/
 .btn:hover {
