--- a/scss/paginas/_estudios.scss
+++ b/scss/paginas/_estudios.scss
@@ -1,9 +1,12 @@
+
 .estudios {
     margin-top: 5%;
-}
-
-.estudios-ul {
-    list-style: none;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.2rem;
+    .estudios-ul {
+        list-style: none;
+        
+        li {
+            font-family: $fuente-primaria;
+            font-size: 1.2rem;
+        }
+    }
 }
