--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -1,7 +1,8 @@
-$color-primario: darkslategrey;
-$color-secundario: black;
+$color-primario: black;
+$color-secundario: darkslategrey;
 $color-terciario: beige;
 
 $fuente-primaria: 'Source Sans Pro', sans-serif;
 $fuente-secundaria: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 $fuente-terciaria: 'Nuosu SIL', serif;
+
