--- a/css/style.css
+++ b/css/style.css
@@ -1,377 +1,349 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-image: url(../imagenes/foto14.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url(../imagenes/foto14.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 header {
-    margin-bottom: 5%;
+  margin-bottom: 5%;
 }
-
-.header .navbar {
-    background-color: rgba(255, 250, 240, 0.4) !important;
-    color: black !important;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 400;
-    font-size: 1.5rem;
-    letter-spacing: 0.3px;
-    padding: 20px;
-}
-
-a:hover {
-    transform: scale(1.1);
-}
-
-/*----------------------------------------media queries navbar-----------------------*/
-@media (max-width: 480px) {
-    .header .navbar {
-        font-size: 1rem;
-        font-weight: 300;
-    }
-}
-
-h1 {
-    font-size: 2.5rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
-    background-color: beige;
-}
-
-@media (max-width: 768px) {
-    h1 {
-    font-size: 1.5rem;
-}
-}
-
-
-/*---------------------------------footer-----------------------------------*/
-
-.eslogan {
-    margin-top: 20%;
-    margin-bottom: 5%;
-    font-family: 'Lato', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: darkslategrey;
-    background-color: rgba(255, 250, 240, 0.4);
-    padding: 10px;
-}
-
-.dweb {
-    font-family: 'Nuosu SIL', serif;
-    font-weight: 600;
-    color: black;
-    font-style: italic;
-}
-
-@media (max-width:480px) {
-    .eslogan {
-        font-size: 1rem;
-    }
-}
-
-@media (max-width:768px) {
-    .eslogan {
-        font-size: 1rem;
-    }
-}
-
-/*-------------------------------boton de whatsapp------------------------------------*/
-.boton {
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 40px;
-    right: 40px;
-    background-color: darkgreen;
-    color: #FFF;
-    border-radius: 50px;
-    text-align: center;
-    font-size: 30px;
-    box-shadow: 2px 2px 3px #999;
-    z-index: 100;
-}
-
-.mi-boton {
-    margin-top: 16px;
-}
-
-/*-------------animacion de h1---------------*/
-h1 {
-    animation-duration: 2s;
-    animation-name: slidein;
-}
-
-/*-----------------------------------------index---------------------------------*/
 
 .portada {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../imagenes/foto\ 7.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 50vh
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../imagenes/foto\ 7.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 50vh;
 }
 
 .portada-p {
-    color: black;
-    background-color: beige;
-    font-family: 'Nuosu SIL', serif;
-    font-weight: 400;
-    padding: 10px;
-    font-size: 1.8rem;
+  color: black;
+  background-color: beige;
+  font-family: "Nuosu SIL", serif;
+  font-weight: 400;
+  padding: 10px;
+  font-size: 1.8rem;
 }
 
 .portada-h1 {
-    color: black;
-    background-color: beige;
-    font-family: 'Nuosu SIL', serif;
-    padding: 10px;
-    font-size: 3rem;
+  color: black;
+  background-color: beige;
+  font-family: "Nuosu SIL", serif;
+  padding: 10px;
+  font-size: 3rem;
 }
-
-@media (max-width:767px) {
-    .portada-h1 {
-        font-size: 1.4rem;
-    }
-
-    .portada-p {
-        font-size: 1.1rem;
-    }
-}
-
-@media (min-width:768px) {
-    .portada {
-        width: 100%;
-        height: 100vh;
-        background-size: cover;
-    }
-}
-
-@media (min-width:1024px) and (max-width:1400px) {
-    .portada {
-        width: 100%;
-        height: 100vh;
-        background-size: cover;
-    }
-}
-/*---------animacion de portada-----------------*/
-
-.portada-h1,
-.portada-p {
-    animation-duration: 6s;
-    animation-name: slidein;
-}
-
-@keyframes slidein {
-    from {
-        margin-left: 100%;
-        width: 300%;
-    }
-
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
-
-@keyframes slidein {
-    from {
-        margin-left: 100%;
-        width: 300%;
-    }
-
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
-
-/*------------------------------------------------------------------------------*/
 
 .institucional {
-    border: solid 1px darkslategrey;
-    border-radius: 5px;
-    margin-top: 5%;
-    margin-bottom: 10%;
-    background-color: rgba(230, 230, 250, 0.7);
-    font-family: 'Bebas Neue', cursiva;
-    font-size: 1.2rem;
-    line-height: 40px;
+  border: solid 1px darkslategrey;
+  border-radius: 5px;
+  margin-top: 5%;
+  margin-bottom: 10%;
+  background-color: rgba(230, 230, 250, 0.7);
+}
+.institucional__titulo {
+  font-family: "Bebas Neue", cursiva;
+  font-size: 2rem;
+}
+.institucional__parrafo {
+  font-size: 1.2rem;
+  line-height: 40px;
 }
 
 .informacion-index {
-    border: solid 1px grey;
-    border-radius: 5px;
-    background-color: whitesmoke;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 50px;
-    font-size: 1rem;
-    list-style: none;
+  border: solid 1px grey;
+  border-radius: 5px;
+  background-color: whitesmoke;
+  font-family: "Source Sans Pro", sans-serif;
+  line-height: 50px;
+  font-size: 1rem;
+  list-style: none;
 }
-
-.ubicacion-titulo {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2rem;
-    margin-top: 5%;
-}
-
-.infoh3 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2rem;
-    margin-top: 5%;
-}
-
-@media (max-width: 480px) {
-    .ubicacion-titulo {
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 1rem;
-        margin-top: 2%;
-        font-weight: 600;
-    }
-
-    .infoh3 {
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 1rem;
-        font-weight: 600;
-        margin-top: 5%;
-    }
-
-    .informacion-index {
-        text-align: center;
-    }
-}
-
-/*---------------------------------staff medico----------------------------*/
 
 .staff {
-    margin-top: 10%;
+  margin-top: 10%;
 }
 
 .staffmedico-name {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 1.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: black;
 }
 
 .staffmedico-p {
-    font-family: 'Bebas Neue', cursiva;
-    font-style: italic;
-    margin-bottom: 5%;
-    font-size: 1.3rem;
-}
-
-.foto {
-    width: auto;
-    height: 30vh;
+  font-family: "Bebas Neue", cursiva;
+  font-style: italic;
+  color: darkslategrey;
+  margin-bottom: 5%;
+  font-size: 1.3rem;
 }
 
 .especialidades-titulo {
-    margin-top: 10%;
-    margin-bottom: 5%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  color: black;
 }
 
-@media (max-width: 480px) {
-    .staff {
-        margin-top: 5%;
-    }
-
-    .staffmedico-name {
-        font-size: 1.2rem;
-    }
-
-    .staffmedico-p {
-        font-size: 1rem;
-    }
+.foto {
+  width: auto;
+  height: 30vh;
 }
-
-/*------------------------------------estudios medicos------------------*/
 
 .estudios {
-    margin-top: 5%;
+  margin-top: 5%;
 }
-
-.estudios-ul {
-    list-style: none;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.2rem;
+.estudios .estudios-ul {
+  list-style: none;
 }
-
-/*--------------------------------------cobertura medica---------------------------*/
+.estudios .estudios-ul li {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.2rem;
+}
 
 .lista {
-    list-style: none;
-    font-size: 1.5rem;
-    font-family: 'Source Sans Pro', sans-serif;
-    margin-top: 5%;
+  list-style: none;
+}
+.lista li {
+  font-size: 1.5rem;
+  font-family: "Source Sans Pro", sans-serif;
+  margin-top: 5%;
+  color: black;
 }
 
-@media (max-width: 768px) {
-    .lista {
-        font-size: 1.2rem;
-    }
+.parrafo-info {
+  list-style: none;
+  font-family: "Source Sans Pro", sans-serif;
+  line-height: 45px;
+  font-style: italic;
+  color: darkslategrey;
 }
 
-/*--------------------------------------contacto--------------------------*/
+.lista-info {
+  list-style: none;
+  font-family: "Source Sans Pro", sans-serif;
+  line-height: 45px;
+  border: solid 1px;
+  border-radius: 5px;
+  background-color: rgba(240, 230, 140, 0.5);
+  color: darkslategrey;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  background-color: beige;
+  color: black;
+}
+
+/*----------------------------------------------------------------*/
+.titulo-info {
+  font-weight: bold;
+  margin-top: 5%;
+}
+
+.header {
+  padding: 20px;
+  background-color: rgba(255, 250, 240, 0.4) !important;
+}
+.header .navbar {
+  color: black !important;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  letter-spacing: 0.3px;
+}
+.header a:hover {
+  transform: scale(1.1);
+}
+
+.eslogan {
+  margin-top: 20%;
+  margin-bottom: 5%;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: darkslategrey;
+  background-color: rgba(255, 250, 240, 0.4);
+  padding: 10px;
+}
+
+.dweb {
+  font-family: "Nuosu SIL", serif;
+  font-weight: 600;
+  color: black;
+  font-style: italic;
+}
+
 .form {
-    background-color: beige;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border: solid 2px white;
-    border-radius: 5px;
+  background-color: beige;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  border: solid 2px beige;
+  border-radius: 5px;
 }
 
 .form-p {
-    font-size: 1.2rem;
-    margin-top: 5%;
+  font-size: 1.2rem;
+  margin-top: 5%;
 }
 
-.info {
-    list-style: none;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 45px;
-    font-style: italic;
-    color: darkslategrey;
+/*----------------------animacion h1-----------------------------*/
+h1 {
+  animation-duration: 2s;
+  animation-name: slidein;
 }
 
-.info2 {
-    list-style: none;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 45px;
-    border: solid 1px;
-    border-radius: 5px;
-    background-color: rgba(240, 230, 140, 0.5);
-    color: darkslategrey;
+/*-------------------------------animacion portada---------------------------------*/
+.portada-h1,
+.portada-p {
+  animation-duration: 6s;
+  animation-name: slidein;
 }
 
-.info3 {
-    font-weight: bold;
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+/*----------------------boton de whats app--------------------------------*/
+.boton {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: darkgreen;
+  color: beige;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+.boton .mi-boton {
+  margin-top: 16px;
 }
 
+/*--------------------------botones contacto-------------------------------*/
 .btn {
-    background-color: darkslategray;
-    color: white;
+  background-color: darkslategrey;
+  color: beige;
+}
+.btn:hover {
+  background-color: cornflowerblue;
+  color: darkslategrey;
 }
 
-@media (max-width: 768px){
-    .form-p {
-        font-size: 1rem;
-    }
+/*---------------------------media queries navbar----------------------------------*/
+@media (max-width: 480px) {
+  .header .navbar {
+    font-size: 1rem;
+    font-weight: 300;
+  }
 }
-/*-----------------animacion de boton formulario-----------*/
-.btn:hover {
-    background-color: cornflowerblue;
-    color: white;
+/*--------------------------media queries h1------------------------------*/
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+  }
 }
-/*------------------------------------------------------------------*/
+/*----------------------------footer-------------------------------*/
+@media (max-width: 480px) {
+  .eslogan {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 768px) {
+  .eslogan {
+    font-size: 1rem;
+  }
+}
+/*--------------------------index--------------------------------*/
+@media (max-width: 767px) {
+  .portada-h1 {
+    font-size: 1.4rem;
+  }
+  .portada-p {
+    font-size: 1.1rem;
+  }
+}
+@media (min-width: 768px) {
+  .portada {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1400px) {
+  .portada {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+  }
+}
+/*---------------------------index-----------------------------*/
+@media (max-width: 480px) {
+  .titulo-info {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 5%;
+  }
+  .informacion-index {
+    text-align: center;
+  }
+}
+/*------------------------------staff medico---------------------------------------*/
+@media (max-width: 480px) {
+  .staff {
+    margin-top: 5%;
+  }
+  .staffmedico-name {
+    font-size: 1.2rem;
+  }
+  .staffmedico-p {
+    font-size: 1rem;
+  }
+}
+/*-------------------------cobertura----------------------------------*/
+@media (max-width: 768px) {
+  .lista {
+    font-size: 1.2rem;
+  }
+}
+/*---------------------------contacto-----------------------------------*/
+@media (max-width: 768px) {
+  .form-p {
+    font-size: 1rem;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
