--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,14 +4,14 @@
     font-family: 'Lato', sans-serif;
     font-size: 1.5rem;
     font-weight: 600;
-    color: darkslategrey;
+    color: $color-secundario;
     background-color: rgba(255, 250, 240, 0.4);
     padding: 10px;
 }
 
 .dweb {
-    font-family: 'Nuosu SIL', serif;
+    font-family: $fuente-terciaria;
     font-weight: 600;
-    color: black;
+    color: $color-primario;
     font-style: italic;
 }
