--- a/scss/layout/_form.scss
+++ b/scss/layout/_form.scss
@@ -1,8 +1,8 @@
 .form {
-    background-color: beige;
+    background-color: $color-terciario;
     margin-top: 3%;
     margin-bottom: 3%;
-    border: solid 2px white;
+    border: solid 2px $color-terciario;
     border-radius: 5px;
 }
 
