--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,13 +1,15 @@
-.header .navbar {
-    background-color: rgba(255, 250, 240, 0.4) !important;
-    color: black !important;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 400;
-    font-size: 1.5rem;
-    letter-spacing: 0.3px;
-    padding: 20px;
-}
 
-a:hover {
-    transform: scale(1.1);
+.header {
+    padding: 20px;
+    background-color: rgba(255, 250, 240, 0.4) !important;
+    .navbar {
+        color: $color-primario !important;
+        font-family: $fuente-primaria;
+        font-weight: 400;
+        font-size: 1.5rem;
+        letter-spacing: 0.3px;
+    }
+    a:hover {
+        transform: scale(1.1);
+    }
 }
