--- a/scss/paginas/_cobertura.scss
+++ b/scss/paginas/_cobertura.scss
@@ -1,6 +1,12 @@
 .lista {
     list-style: none;
+
+    li {
     font-size: 1.5rem;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: $fuente-primaria;
     margin-top: 5%;
+    color: $color-primario;
+
+    }
+    
 }
