--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ header {
   margin-bottom: 5%;
 }
 
+.logo {
+  width: 60%;
+  height: 60%;
+}
+
 .portada {
   display: flex;
   flex-direction: column;
