agregue logo nuevamente

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,12 @@ header {
 }
 
 .logo {
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
+}
+
+.navbar-brand {
+  width: 10%;
 }
 
 .portada {
