--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -4,9 +4,9 @@ h1 {
     font-weight: 600;
     background-color: $color-terciario;
     color: $color-primario;
+    text-align: center;
 }
 
-/*----------------------------------------------------------------*/
 
 .titulo-info {
     font-weight: bold;
