--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -7,6 +7,17 @@
     }
 }
 
+@media (max-width: 768px) {
+    .navbar-brand {
+        width: 20%;
+    }
+    .logo {
+        width: 60%;
+        height: 60%;
+    }
+}
+
+
 /*--------------------------media queries h1------------------------------*/
 
 
