--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,17 @@ header {
   margin-bottom: 5%;
 }
 
-.logo {
-  width: 100%;
-  height: 100%;
-}
-
 .navbar-brand {
   width: 10%;
+}
+
+.logo {
+  width: 80%;
+  height: 80%;
+}
+
+.calendar, .location, .phone, .wapp, .mail {
+  padding: 10px;
 }
 
 .portada {
@@ -55,6 +59,7 @@ header {
 .institucional {
   border: solid 1px darkslategrey;
   border-radius: 5px;
+  box-shadow: 10px 10px 5px lightblue;
   margin-top: 5%;
   margin-bottom: 10%;
   background-color: rgba(230, 230, 250, 0.7);
@@ -64,6 +69,7 @@ header {
   font-size: 2rem;
 }
 .institucional__parrafo {
+  font-family: "Bebas Neue", cursiva;
   font-size: 1.2rem;
   line-height: 40px;
 }
@@ -71,11 +77,9 @@ header {
 .informacion-index {
   border: solid 1px grey;
   border-radius: 5px;
+  box-shadow: 10px 10px 5px grey;
   background-color: whitesmoke;
-  font-family: "Source Sans Pro", sans-serif;
-  line-height: 50px;
   font-size: 1rem;
-  list-style: none;
 }
 
 .staff {
@@ -129,24 +133,27 @@ header {
   font-family: "Source Sans Pro", sans-serif;
   margin-top: 5%;
   color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lista-info, .parrafo-info, .informacion-index {
+  list-style: none;
+  font-family: "Source Sans Pro", sans-serif;
+  line-height: 45px;
+  color: darkslategrey;
 }
 
 .parrafo-info {
-  list-style: none;
-  font-family: "Source Sans Pro", sans-serif;
-  line-height: 45px;
   font-style: italic;
-  color: darkslategrey;
 }
 
 .lista-info {
-  list-style: none;
-  font-family: "Source Sans Pro", sans-serif;
-  line-height: 45px;
   border: solid 1px;
   border-radius: 5px;
+  box-shadow: 10px 10px 5px darkgrey;
   background-color: rgba(240, 230, 140, 0.5);
-  color: darkslategrey;
 }
 
 h1 {
@@ -155,9 +162,9 @@ h1 {
   font-weight: 600;
   background-color: beige;
   color: black;
+  text-align: center;
 }
 
-/*----------------------------------------------------------------*/
 .titulo-info {
   font-weight: bold;
   margin-top: 5%;
@@ -201,6 +208,7 @@ h1 {
   margin-top: 3%;
   margin-bottom: 3%;
   border: solid 2px beige;
+  box-shadow: 10px 10px 5px grey;
   border-radius: 5px;
 }
 
@@ -276,6 +284,15 @@ h1 {
   .header .navbar {
     font-size: 1rem;
     font-weight: 300;
+  }
+}
+@media (max-width: 768px) {
+  .navbar-brand {
+    width: 20%;
+  }
+  .logo {
+    width: 60%;
+    height: 60%;
   }
 }
 /*--------------------------media queries h1------------------------------*/
