--- a/scss/layout/_form.scss
+++ b/scss/layout/_form.scss
@@ -3,6 +3,7 @@
     margin-top: 3%;
     margin-bottom: 3%;
     border: solid 2px $color-terciario;
+    box-shadow: 10px 10px 5px grey;
     border-radius: 5px;
 }
 
