--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(../imagenes/foto14.jpg);
+  background-image: url(../imagenes/fondo.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -371,7 +371,7 @@ h1 {
     margin-top: 5%;
   }
   .informacion-index {
-    text-align: center;
+    text-align: start;
   }
 }
 /*------------------------------staff medico---------------------------------------*/
@@ -396,6 +396,17 @@ h1 {
 @media (max-width: 768px) {
   .form-p {
     font-size: 1rem;
+    text-align: start;
+  }
+}
+@media (max-width: 768px) {
+  .boton {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 15px;
+    right: 15px;
+    font-size: 23px;
   }
 }
 
