--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../imagenes/foto14.jpg);
+    background-image: url(../imagenes/fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
