--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -79,7 +79,7 @@
     }
 
     .informacion-index {
-        text-align: center;
+        text-align:start;
     }
 }
 /*------------------------------staff medico---------------------------------------*/
@@ -107,6 +107,18 @@
 @media (max-width: 768px){
     .form-p {
         font-size: 1rem;
+        text-align: start;
     }
 }
 
+@media (max-width: 768px){
+    .boton {
+        position: fixed;
+        width: 50px;
+        height: 50px;
+        bottom: 15px;
+        right: 15px;
+        font-size: 23px;
+    }
+       
+    }
