--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,8 @@
 body {
-    background-image: url(../imagenes/fondo.jpg);
+    /*background-image: url(../imagenes/fondo2.jpg);*/
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 header {
@@ -9,9 +10,6 @@ header {
 }
 
 
-.navbar-brand {
-    width: 10%;
-}
 .logo {
     width: 80%;
     height: 80%;
