--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,7 +1,7 @@
 
 .header {
     padding: 20px;
-    background-color: rgba(255, 250, 240, 0.4) !important;
+    background-color: rgba(240, 230, 140, 0.5) !important;
     .navbar {
         color: $color-primario !important;
         font-family: $fuente-primaria;
@@ -11,5 +11,8 @@
     }
     a:hover {
         transform: scale(1.1);
+    }
+    .navbar-brand {
+        width: 10%;
     }
 }
