--- a/scss/paginas/_contacto.scss
+++ b/scss/paginas/_contacto.scss
@@ -16,6 +16,7 @@
     border-radius: 5px;
     box-shadow: 10px 10px 5px darkgrey;
     background-color: rgba(240, 230, 140, 0.5);
+    padding: 20px;
     
 }
 
