--- a/css/style.css
+++ b/css/style.css
@@ -77,17 +77,20 @@ header {
 .institucional {
   border: solid 1px darkslategrey;
   border-radius: 5px;
-  box-shadow: 10px 10px 5px lightblue;
+  box-shadow: 7px 7px 5px grey;
   margin-top: 5%;
   margin-bottom: 10%;
   background-color: rgba(230, 230, 250, 0.7);
+  padding: 20px;
 }
 .institucional__titulo {
-  font-family: "Bebas Neue", cursiva;
-  font-size: 2rem;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.6rem;
+  letter-spacing: 5px;
+  font-weight: 400;
 }
 .institucional__parrafo {
-  font-family: "Bebas Neue", cursiva;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 1.2rem;
   line-height: 40px;
 }
@@ -95,9 +98,10 @@ header {
 .informacion-index {
   border: solid 1px grey;
   border-radius: 5px;
-  box-shadow: 10px 10px 5px grey;
+  box-shadow: 7px 7px 5px grey;
   background-color: whitesmoke;
   font-size: 1rem;
+  padding: 25px;
 }
 
 .staff {
@@ -107,7 +111,7 @@ header {
 .staffmedico-name {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: black;
 }
 
@@ -116,7 +120,7 @@ header {
   font-style: italic;
   color: darkslategrey;
   margin-bottom: 5%;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
 }
 
 .especialidades-titulo {
@@ -137,22 +141,23 @@ header {
 }
 .estudios .titulo-h2 {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
+  text-align: center;
 }
 .estudios .estudios-ul {
   list-style: none;
 }
 .estudios li {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .lista {
   list-style: none;
 }
 .lista li {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-family: "Source Sans Pro", sans-serif;
   margin-top: 5%;
   color: black;
@@ -177,6 +182,7 @@ header {
   border-radius: 5px;
   box-shadow: 10px 10px 5px darkgrey;
   background-color: rgba(240, 230, 140, 0.5);
+  padding: 20px;
 }
 
 h1 {
@@ -219,14 +225,16 @@ footer {
   margin-top: 20%;
   margin-bottom: 5%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
   color: black;
   padding: 10px;
+  letter-spacing: 10px;
 }
 
 .dweb {
   font-family: "Nuosu SIL", serif;
+  font-size: 1rem;
   font-weight: 600;
   color: black;
   font-style: italic;
@@ -237,7 +245,7 @@ footer {
   margin-top: 3%;
   margin-bottom: 3%;
   border: solid 2px beige;
-  box-shadow: 10px 10px 5px grey;
+  box-shadow: 7px 7px 5px grey;
   border-radius: 5px;
 }
 
