--- a/scss/paginas/_estudios.scss
+++ b/scss/paginas/_estudios.scss
@@ -4,15 +4,16 @@
 
     .titulo-h2 {
         font-family: $fuente-primaria;  
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 600;
+        text-align: center;
     }
     .estudios-ul {
         list-style: none;
     }
         li {
             font-family: $fuente-primaria;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
         }
 }
 
