--- a/scss/paginas/_index.scss
+++ b/scss/paginas/_index.scss
@@ -30,17 +30,20 @@
 .institucional {
     border: solid 1px darkslategrey;
     border-radius: 5px;
-    box-shadow: 10px 10px 5px lightblue;
+    box-shadow: 7px 7px 5px grey;
     margin-top: 5%;
     margin-bottom: 10%;
     background-color: rgba(230, 230, 250, 0.7);
+    padding: 20px;
 
     &__titulo {
-        font-family: 'Bebas Neue', cursiva;
-        font-size: 2rem;
+        font-family: $fuente-primaria;
+        font-size: 1.6rem;
+        letter-spacing: 5px;
+        font-weight: 400;
     }
     &__parrafo {
-        font-family: 'Bebas Neue', cursiva;
+        font-family: $fuente-primaria;
         font-size: 1.2rem;
         line-height: 40px;
     }
@@ -52,9 +55,10 @@
     @extend %parrafo;
     border: solid 1px grey;
     border-radius: 5px;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 7px 7px 5px grey;
     background-color: whitesmoke;
     font-size: 1rem;
+    padding: 25px;
 }
 
 
