--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -6,7 +6,7 @@ h1 {
     color: $color-primario;
     text-align: center;
 }
-
+/*-----------------titulos de secciones informativas (index/contacto)-----------*/
 
 .titulo-info {
     font-weight: bold;
