--- a/scss/paginas/_index.scss
+++ b/scss/paginas/_index.scss
@@ -7,24 +7,24 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 50vh
-}
+    height: 50vh; 
+    
+    .portada-p {
+        color: black;
+        background-color: beige;
+        font-family: 'Nuosu SIL', serif;
+        font-weight: 400;
+        padding: 10px;
+        font-size: 1.8rem;
+    }
 
-.portada-p {
-    color: black;
-    background-color: beige;
-    font-family: 'Nuosu SIL', serif;
-    font-weight: 400;
-    padding: 10px;
-    font-size: 1.8rem;
-}
-
-.portada-h1 {
-    color: black;
-    background-color: beige;
-    font-family: 'Nuosu SIL', serif;
-    padding: 10px;
-    font-size: 3rem;
+    .portada-h1 {
+        color: black;
+        background-color: beige;
+        font-family: 'Nuosu SIL', serif;
+        padding: 10px;
+        font-size: 2.5rem;
+    }
 }
 
 .institucional {
@@ -42,12 +42,13 @@
         letter-spacing: 5px;
         font-weight: 400;
     }
+
     &__parrafo {
         font-family: $fuente-primaria;
         font-size: 1.2rem;
         line-height: 40px;
     }
-    
+
 }
 
 
@@ -60,5 +61,3 @@
     font-size: 1rem;
     padding: 25px;
 }
-
-
