--- a/scss/paginas/_staffmedico.scss
+++ b/scss/paginas/_staffmedico.scss
@@ -1,28 +1,40 @@
 .staff {
-    margin-top: 10%;
-}
+    margin-top: 5%;
 
-.staffmedico-name {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 1.4rem;
-    color: $color-primario;
-}
+    .staffmedico-name {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+        font-size: 1.3rem;
+        color: $color-primario;
+    }
 
-.staffmedico-p {
-    font-family: 'Bebas Neue', cursiva;
-    font-style: italic;
-    color: $color-secundario;
-    margin-bottom: 5%;
-    font-size: 1.1rem;
-}
+    .staffmedico-p {
+        font-family: 'Bebas Neue', cursiva;
+        font-style: italic;
+        color: $color-secundario;
+        margin-bottom: 5%;
+        font-size: 1.1rem;
+    }
 
-.especialidades-titulo {
-    margin-top: 10%;
-    margin-bottom: 5%;
-    font-family: $fuente-secundaria;
-    font-weight: 600;
-    color: $color-primario;
+    .staff-titulo {
+        margin-bottom: 8%;
+        font-family: $fuente-secundaria;
+        font-weight: 600;
+        color: $color-primario;
+        font-size: 1.5rem;
+    }
+
+    .staff-h2 {
+        margin-bottom: 8%;
+        font-size: 1.5rem;
+        font-family: $fuente-secundaria;
+        color: $color-primario;
+    }
+
+    .medico {
+        margin-top: 10%;
+    }
+
 }
 
 .foto {
