--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,16 @@ header {
   height: 80%;
 }
 
+/*-------------------iconos de index/contacto-------------------------*/
 .calendar, .location, .phone, .wapp, .mail {
   padding: 10px;
   color: grey;
+}
+
+/*-------------------titulos de secciones de informacion index/contacto----------------------*/
+.info__titulo {
+  font-weight: bold;
+  margin-top: 5%;
 }
 
 .btn-instagram, .btn-linkedin, .btn-facebook, .btn-messenger {
@@ -55,7 +62,7 @@ header {
   width: 100%;
   height: 50vh;
 }
-.portada .portada-p {
+.portada .portada__p {
   color: black;
   background-color: beige;
   font-family: "Nuosu SIL", serif;
@@ -63,7 +70,7 @@ header {
   padding: 10px;
   font-size: 1.8rem;
 }
-.portada .portada-h1 {
+.portada .portada__h1 {
   color: black;
   background-color: beige;
   font-family: "Nuosu SIL", serif;
@@ -92,7 +99,7 @@ header {
   line-height: 40px;
 }
 
-.informacion-index {
+.info__listado {
   border: solid 1px grey;
   border-radius: 5px;
   box-shadow: 7px 7px 5px grey;
@@ -104,37 +111,36 @@ header {
 .staff {
   margin-top: 5%;
 }
-.staff .staffmedico-name {
+.staff .staff__name {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 1.3rem;
   color: black;
 }
-.staff .staffmedico-p {
+.staff .staff__p {
   font-family: "Bebas Neue", cursiva;
   font-style: italic;
   color: darkslategrey;
   margin-bottom: 5%;
   font-size: 1.1rem;
 }
-.staff .staff-titulo {
+.staff .staff__titulo {
   margin-bottom: 8%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
   color: black;
   font-size: 1.5rem;
 }
-.staff .staff-h2 {
+.staff .staff__h2 {
   margin-bottom: 8%;
   font-size: 1.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: black;
 }
-.staff .medico {
+.staff .staff__medico {
   margin-top: 10%;
 }
-
-.foto {
+.staff .staff__foto {
   width: auto;
   height: 30vh;
 }
@@ -142,13 +148,13 @@ header {
 .estudios {
   margin-top: 5%;
 }
-.estudios .titulo-h2 {
+.estudios .estudios__h2 {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
   text-align: center;
 }
-.estudios .estudios-ul {
+.estudios .estudios__ul {
   list-style: none;
 }
 .estudios li {
@@ -169,18 +175,18 @@ header {
   align-items: center;
 }
 
-.lista-info, .parrafo-info, .informacion-index {
+.info__lista, .info__parrafo, .info__listado {
   list-style: none;
   font-family: "Source Sans Pro", sans-serif;
   line-height: 45px;
   color: darkslategrey;
 }
 
-.parrafo-info {
+.info__parrafo {
   font-style: italic;
 }
 
-.lista-info {
+.info__lista {
   border: solid 1px;
   border-radius: 5px;
   box-shadow: 10px 10px 5px darkgrey;
@@ -195,12 +201,6 @@ h1 {
   background-color: beige;
   color: black;
   text-align: center;
-}
-
-/*-----------------titulos de secciones informativas (index/contacto)-----------*/
-.titulo-info {
-  font-weight: bold;
-  margin-top: 5%;
 }
 
 .header {
@@ -224,7 +224,7 @@ h1 {
 footer {
   background-color: rgba(132, 122, 122, 0.3);
 }
-footer .eslogan {
+footer .footer__eslogan {
   margin-top: 20%;
   margin-bottom: 5%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -234,7 +234,7 @@ footer .eslogan {
   padding: 10px;
   letter-spacing: 10px;
 }
-footer .dweb {
+footer .footer__desarrollo {
   font-family: "Nuosu SIL", serif;
   font-size: 1rem;
   font-weight: 600;
@@ -308,7 +308,7 @@ h1 {
   margin-top: 16px;
 }
 
-/*--------------------------botones contacto-------------------------------*/
+/*--------------------------botones formulario de contacto-------------------------------*/
 .btn {
   background-color: darkslategrey;
   color: beige;
@@ -348,10 +348,10 @@ h1 {
 }
 /*--------------------------index--------------------------------*/
 @media (max-width: 767px) {
-  .portada-h1 {
+  .portada__h1 {
     font-size: 1.4rem;
   }
-  .portada-p {
+  .portada__p {
     font-size: 1.1rem;
   }
 }
@@ -371,7 +371,7 @@ h1 {
 }
 /*---------------------------index-----------------------------*/
 @media (max-width: 480px) {
-  .titulo-info {
+  .info__titulo {
     font-family: "Source Sans Pro", sans-serif;
     font-size: 1rem;
     font-weight: 600;
@@ -380,10 +380,10 @@ h1 {
 }
 /*------------------------------staff medico---------------------------------------*/
 @media (max-width: 480px) {
-  .staffmedico-name .staff-h2 .staff-titulo {
+  .staff__name .staff__h2 .staff__titulo {
     font-size: 1rem;
   }
-  .staffmedico-p {
+  .staff__p {
     font-size: 0.8rem;
   }
 }
