--- a/scss/componentes/_botones.scss
+++ b/scss/componentes/_botones.scss
@@ -18,7 +18,7 @@
     }
 }
 
-/*--------------------------botones contacto-------------------------------*/
+/*--------------------------botones formulario de contacto-------------------------------*/
 
 
 
