--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     background-color: rgba(132, 122, 122, 0.3);
 
-    .eslogan {
+    .footer__eslogan {
         margin-top: 20%;
         margin-bottom: 5%;
         font-family: $fuente-secundaria;
@@ -12,7 +12,7 @@ footer {
         letter-spacing: 10px;
     }
 
-    .dweb {
+    .footer__desarrollo {
         font-family: $fuente-terciaria;
         font-size: 1rem;
         font-weight: 600;
