--- a/scss/paginas/_staffmedico.scss
+++ b/scss/paginas/_staffmedico.scss
@@ -1,14 +1,14 @@
 .staff {
     margin-top: 5%;
 
-    .staffmedico-name {
+    .staff__name {
         font-family: 'Montserrat', sans-serif;
         font-weight: 600;
         font-size: 1.3rem;
         color: $color-primario;
     }
 
-    .staffmedico-p {
+    .staff__p {
         font-family: 'Bebas Neue', cursiva;
         font-style: italic;
         color: $color-secundario;
@@ -16,7 +16,7 @@
         font-size: 1.1rem;
     }
 
-    .staff-titulo {
+    .staff__titulo {
         margin-bottom: 8%;
         font-family: $fuente-secundaria;
         font-weight: 600;
@@ -24,20 +24,22 @@
         font-size: 1.5rem;
     }
 
-    .staff-h2 {
+    .staff__h2 {
         margin-bottom: 8%;
         font-size: 1.5rem;
         font-family: $fuente-secundaria;
         color: $color-primario;
     }
 
-    .medico {
+    .staff__medico {
         margin-top: 10%;
     }
+    
+    .staff__foto {
+        width: auto;
+        height: 30vh;
+    }
+
 
 }
 
-.foto {
-    width: auto;
-    height: 30vh;
-}
