--- a/css/style.css
+++ b/css/style.css
@@ -30,25 +30,12 @@ header {
   margin-top: 5%;
 }
 
-.btn-instagram, .btn-linkedin, .btn-facebook, .btn-messenger {
-  width: 5%;
-  height: 5%;
-}
-
-.btn-messenger {
+.bi-messenger {
   color: blue;
 }
 
-.btn-facebook {
+.bi-facebook {
   color: rgb(85, 85, 192);
-}
-
-.btn-linkedin {
-  color: lightblue;
-}
-
-.btn-instagram {
-  color: fuchsia;
 }
 
 .portada {
@@ -60,7 +47,14 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 50vh;
+  height: 150vh;
+}
+.portada .portada__h1 {
+  color: black;
+  background-color: beige;
+  font-family: "Nuosu SIL", serif;
+  padding: 10px;
+  font-size: 2rem;
 }
 .portada .portada__p {
   color: black;
@@ -69,13 +63,6 @@ header {
   font-weight: 400;
   padding: 10px;
   font-size: 1.8rem;
-}
-.portada .portada__h1 {
-  color: black;
-  background-color: beige;
-  font-family: "Nuosu SIL", serif;
-  padding: 10px;
-  font-size: 2.5rem;
 }
 
 .institucional {
@@ -166,7 +153,7 @@ header {
   list-style: none;
 }
 .cobertura li {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-family: "Source Sans Pro", sans-serif;
   margin-top: 5%;
   color: black;
@@ -178,6 +165,7 @@ header {
 .info__lista, .info__parrafo, .info__listado {
   list-style: none;
   font-family: "Source Sans Pro", sans-serif;
+  font-size: 1rem;
   line-height: 45px;
   color: darkslategrey;
 }
@@ -187,9 +175,9 @@ header {
 }
 
 .info__lista {
-  border: solid 1px;
+  border: solid 1px grey;
   border-radius: 5px;
-  box-shadow: 10px 10px 5px darkgrey;
+  box-shadow: 7px 7px 5px darkgrey;
   background-color: rgba(240, 230, 140, 0.5);
   padding: 20px;
 }
@@ -198,7 +186,7 @@ h1 {
   font-size: 2.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
-  background-color: beige;
+  background-color: rgba(255, 127, 80, 0.3);
   color: black;
   text-align: center;
 }
@@ -208,10 +196,7 @@ h1 {
   background-color: rgba(240, 230, 140, 0.5) !important;
 }
 .header .navbar {
-  color: black !important;
   font-family: "Source Sans Pro", sans-serif;
-  font-weight: 400;
-  font-size: 1.5rem;
   letter-spacing: 0.3px;
 }
 .header a:hover {
@@ -220,26 +205,34 @@ h1 {
 .header .navbar-brand {
   width: 10%;
 }
+.header .nav-item {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+.header .nav-link {
+  color: black;
+}
 
 footer {
   background-color: rgba(132, 122, 122, 0.3);
 }
 footer .footer__eslogan {
   margin-top: 20%;
-  margin-bottom: 5%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
   color: black;
-  padding: 10px;
+  padding: 25px;
   letter-spacing: 10px;
 }
 footer .footer__desarrollo {
-  font-family: "Nuosu SIL", serif;
-  font-size: 1rem;
-  font-weight: 600;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 0.7rem;
+  font-weight: 400;
   color: black;
-  font-style: italic;
+  background-color: rgba(47, 79, 79, 0.5);
+  padding: 10px;
+  letter-spacing: 4px;
 }
 
 .form {
@@ -262,7 +255,7 @@ h1 {
   animation-name: slidein;
 }
 
-/*-------------------------------animacion portada---------------------------------*/
+/*--------------------animacion portada------------------------*/
 .portada-h1,
 .portada-p {
   animation-duration: 6s;
@@ -301,7 +294,7 @@ h1 {
   border-radius: 50px;
   text-align: center;
   font-size: 30px;
-  box-shadow: 2px 2px 3px #999;
+  box-shadow: 2px 2px 3px rgb(40, 38, 38);
   z-index: 100;
 }
 .boton .mi-boton {
@@ -337,36 +330,40 @@ h1 {
 /*--------------------------media queries h1------------------------------*/
 @media (max-width: 768px) {
   h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 /*----------------------------footer-------------------------------*/
 @media (max-width: 768px) {
-  .eslogan {
+  .footer__eslogan {
     font-size: 1rem;
   }
 }
 /*--------------------------index--------------------------------*/
-@media (max-width: 767px) {
+@media (max-width: 480px) {
+  .portada {
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
+  }
   .portada__h1 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
   .portada__p {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .portada {
-    width: 100%;
-    height: 100vh;
     background-size: cover;
+    width: 100%;
+    height: 50vh;
   }
-}
-@media (min-width: 1024px) and (max-width: 1400px) {
-  .portada {
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
+  .portada__h1 {
+    font-size: 1.5rem;
+  }
+  .portada__p {
+    font-size: 1.2rem;
   }
 }
 /*---------------------------index-----------------------------*/
@@ -406,14 +403,14 @@ h1 {
 /*-------------------------cobertura----------------------------------*/
 @media (max-width: 768px) {
   .lista {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 /*---------------------------contacto-----------------------------------*/
 @media (max-width: 768px) {
   .form-p {
     font-size: 1rem;
-    text-align: start;
+    text-align: center;
   }
 }
 @media (max-width: 768px) {
