--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -2,7 +2,7 @@ h1 {
     font-size: 2.5rem;
     font-family: $fuente-secundaria;
     font-weight: 600;
-    background-color: $color-terciario;
+    background-color: 	rgba(255, 127, 80, 0.3);
     color: $color-primario;
     text-align: center;
 }
