--- a/scss/componentes/_botones.scss
+++ b/scss/componentes/_botones.scss
@@ -10,7 +10,7 @@
     border-radius: 50px;
     text-align: center;
     font-size: 30px;
-    box-shadow: 2px 2px 3px #999;
+    box-shadow: 2px 2px 3px rgb(40, 38, 38);
     z-index: 100;
 
     .mi-boton {
