--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -24,42 +24,46 @@
 
 @media (max-width: 768px) {
     h1 {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 }
 
 /*----------------------------footer-------------------------------*/
 
 @media (max-width:768px) {
-    .eslogan {
+    .footer__eslogan {
         font-size: 1rem;
     }
 }
 
 /*--------------------------index--------------------------------*/
-@media (max-width:767px) {
+
+
+@media (max-width: 480px) {
+    .portada {
+        background-size: cover;
+        width: 100%;
+        height: 50vh;
+    }
     .portada__h1 {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
-
     .portada__p {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 }
 
-@media (min-width:768px) {
+@media (max-width:768px) {
     .portada {
-        width: 100%;
-        height: 100vh;
         background-size: cover;
+        width: 100%;
+        height: 50vh;
     }
-}
-
-@media (min-width:1024px) and (max-width:1400px) {
-    .portada {
-        width: 100%;
-        height: 100vh;
-        background-size: cover;
+    .portada__h1 {
+        font-size: 1.5rem;
+    }
+    .portada__p {
+        font-size: 1.2rem;
     }
 }
 
@@ -110,7 +114,7 @@
 /*-------------------------cobertura----------------------------------*/
 @media (max-width: 768px) {
     .lista {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 }
 
@@ -118,7 +122,7 @@
 @media (max-width: 768px) {
     .form-p {
         font-size: 1rem;
-        text-align: start;
+        text-align: center;
     }
 }
 
@@ -140,3 +144,4 @@
     }
 
 }
+
