--- a/scss/paginas/_contacto.scss
+++ b/scss/paginas/_contacto.scss
@@ -1,6 +1,7 @@
 %parrafo {
     list-style: none;
     font-family: $fuente-primaria;
+    font-size: 1rem;
     line-height: 45px;
     color: $color-secundario;
 }
@@ -12,9 +13,9 @@
 
 .info__lista {
     @extend %parrafo;
-    border: solid 1px;
+    border: solid 1px grey;
     border-radius: 5px;
-    box-shadow: 10px 10px 5px darkgrey;
+    box-shadow: 7px 7px 5px darkgrey;
     background-color: rgba(240, 230, 140, 0.5);
     padding: 20px;
     
