--- a/css/style.css
+++ b/css/style.css
@@ -269,8 +269,7 @@ h1 {
 }
 
 /*--------------------animacion portada------------------------*/
-.portada-h1,
-.portada-p {
+.portada__h1, .portada__p {
   animation-duration: 6s;
   animation-name: slidein;
 }
@@ -326,8 +325,11 @@ h1 {
 
 /*---------------------------navbar----------------------------------*/
 @media (min-width: 320px) and (max-width: 768px) {
-  .header .navbar {
-    font-size: 1rem; /*no se aplica*/
+  .header {
+    padding: 15px;
+  }
+  .header .nav-item {
+    font-size: 1rem;
     font-weight: 300;
   }
 }
@@ -343,6 +345,7 @@ h1 {
   }
   h1 {
     font-size: 1.3rem;
+    margin-top: 30px;
   }
   /*----index----*/
   .portada {
@@ -350,33 +353,39 @@ h1 {
     width: 100%;
     height: 50vh;
   }
-  .portada__h1 {
-    font-size: 1.3rem; /*no se aplica*/
+  .portada .portada__h1 {
+    font-size: 1.3rem;
   }
-  .portada__p {
-    font-size: 1.1rem; /*no se aplica*/
+  .portada .portada__p {
+    font-size: 1.1rem;
   }
-  .institucional__titulo {
+  .institucional {
+    box-shadow: 5px 5px 3px;
+  }
+  .institucional .institucional__titulo {
     font-size: 1.2rem;
   }
-  .institucional__parrafo {
+  .institucional .institucional__parrafo {
     font-size: 1rem;
   }
-  .info__titulo {
+  .institucional .info__titulo {
     font-size: 1.2rem;
   }
   /*----staff----*/
-  .staff__titulo {
-    font-size: 1.1rem; /*no se aplica*/
+  .staff {
+    margin-top: 40px;
   }
-  .staff__h2 { /*no se aplica*/
+  .staff .staff__titulo {
     font-size: 1.1rem;
   }
-  .staff__name {
-    font-size: 1.1rem; /*no se aplica*/
+  .staff .staff__h2 {
+    font-size: 1.1rem;
   }
-  .staff__p {
-    font-size: 1rem; /*no se aplica*/
+  .staff .staff__name {
+    font-size: 1.1rem;
+  }
+  .staff .staff__p {
+    font-size: 1rem;
   }
   /*----contacto----*/
   .form-p {
@@ -393,14 +402,18 @@ h1 {
     font-size: 23px;
   }
   /*----footer----*/
-  .footer__eslogan {
-    font-size: 1rem; /*no se aplica*/
+  footer {
+    background-color: rgba(132, 122, 122, 0.3);
+  }
+  footer .footer__eslogan {
+    font-size: 1rem;
   }
 }
 /*-----cobertura (aca se aplicó grid)-----*/
 @media (min-width: 768px) and (max-width: 1400px) {
   .cobertura {
-    font-size: 1.3rem; /*no se aplica*/
+    font-size: 1.3rem;
+    /*no se aplica*/
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 1fr;
