agregue pagina de indicaciones, di nuevos estilos y colores

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,15 +2,13 @@
 body {
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-header {
-    margin-bottom: 5%;
+    background-color: rgba(254, 249, 231 );
+    
 }
 
 .logo {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
 }
 
 /*-------------------iconos de index/contacto-------------------------*/
