--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,8 @@
 
 @import"componentes/redes";
 
+@import "paginas/indicaciones";
+
 @import"paginas/index.scss";
 
 @import"paginas/staffmedico.scss";
