--- a/scss/paginas/_staffmedico.scss
+++ b/scss/paginas/_staffmedico.scss
@@ -13,22 +13,17 @@
         font-style: italic;
         color: $color-secundario;
         margin-bottom: 5%;
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
     .staff__titulo {
         margin-bottom: 8%;
         font-family: $fuente-secundaria;
+        background-color: rgba(132, 122, 122, 0.2);
         font-weight: 600;
         color: $color-primario;
         font-size: 1.5rem;
-    }
-
-    .staff__h2 {
-        margin-bottom: 8%;
-        font-size: 1.5rem;
-        font-family: $fuente-secundaria;
-        color: $color-primario;
+        box-shadow: 5px 5px 3px grey;
     }
 
     .staff__medico {
