--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,12 @@
 body {
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-header {
-  margin-bottom: 5%;
+  background-color: rgb(254, 249, 231);
 }
 
 .logo {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
 }
 
 /*-------------------iconos de index/contacto-------------------------*/
@@ -39,6 +36,22 @@ header {
   color: rgb(85, 85, 192);
 }
 
+.preparaciones {
+  font-family: "Source Sans Pro", sans-serif;
+}
+.preparaciones .preparaciones__p {
+  font-weight: 600;
+  font-size: 1.2rem;
+  margin-top: 20px;
+}
+.preparaciones .preparaciones__li {
+  text-decoration: none;
+  font-size: 1.1rem;
+}
+.preparaciones .preparaciones__li::before {
+  content: url(/iconos/arrow-right-short.svg);
+}
+
 .portada {
   display: flex;
   flex-direction: column;
@@ -48,7 +61,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 150vh;
+  height: 120vh;
 }
 .portada .portada__h1 {
   color: black;
@@ -60,6 +73,7 @@ header {
 .portada .portada__p {
   color: black;
   background-color: beige;
+  box-shadow: 5px 5px 3px grey;
   font-family: "Nuosu SIL", serif;
   font-weight: 400;
   padding: 10px;
@@ -67,12 +81,11 @@ header {
 }
 
 .institucional {
-  border: solid 1px darkslategrey;
   border-radius: 5px;
   box-shadow: 7px 7px 5px grey;
   margin-top: 5%;
   margin-bottom: 10%;
-  background-color: rgba(230, 230, 250, 0.7);
+  background-color: rgba(240, 230, 140, 0.5);
   padding: 20px;
 }
 .institucional__titulo {
@@ -88,10 +101,9 @@ header {
 }
 
 .info__listado {
-  border: solid 1px grey;
   border-radius: 5px;
   box-shadow: 7px 7px 5px grey;
-  background-color: whitesmoke;
+  background-color: rgba(240, 230, 140, 0.5);
   font-size: 1rem;
   padding: 25px;
 }
@@ -110,20 +122,16 @@ header {
   font-style: italic;
   color: darkslategrey;
   margin-bottom: 5%;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 .staff .staff__titulo {
   margin-bottom: 8%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgba(132, 122, 122, 0.2);
   font-weight: 600;
   color: black;
   font-size: 1.5rem;
-}
-.staff .staff__h2 {
-  margin-bottom: 8%;
-  font-size: 1.5rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: black;
+  box-shadow: 5px 5px 3px grey;
 }
 .staff .staff__medico {
   margin-top: 10%;
@@ -140,14 +148,35 @@ header {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
-  text-align: center;
+  background-color: beige;
+  box-shadow: 5px 5px 3px grey;
+  padding: 10px;
 }
 .estudios .estudios__ul {
   list-style: none;
+  padding: 20px;
 }
-.estudios li {
+.estudios .li {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.1rem;
+}
+.estudios li:before {
+  content: url(/iconos/arrow-right-short.svg);
+}
+
+.indicaciones {
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  font-family: "Source Sans Pro", sans-serif;
+  margin-top: 5%;
+  background-color: beige;
+  box-shadow: 5px 5px 3px grey;
+}
+
+.indicaciones:hover {
+  transform: scale(1.1);
+  color: darkgoldenrod;
 }
 
 .cobertura {
@@ -162,6 +191,20 @@ header {
   justify-content: center;
   align-items: center;
 }
+.cobertura li:before {
+  content: url(/iconos/chevron-double-right.svg);
+}
+.cobertura li:hover {
+  transform: scale(1.1);
+  color: darkgoldenrod;
+}
+
+.cobertura-p {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-top: 5%;
+}
 
 .info__lista, .info__parrafo, .info__listado {
   list-style: none;
@@ -172,11 +215,11 @@ header {
 }
 
 .info__parrafo {
-  font-style: italic;
+  font-style: normal;
+  font-weight: 600;
 }
 
 .info__lista {
-  border: solid 1px grey;
   border-radius: 5px;
   box-shadow: 7px 7px 5px darkgrey;
   background-color: rgba(240, 230, 140, 0.5);
@@ -199,14 +242,16 @@ h1 {
   font-size: 2.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
-  background-color: rgba(255, 127, 80, 0.3);
+  background-color: rgba(185, 119, 14, 0.4);
   color: black;
   text-align: center;
+  box-shadow: 5px 5px 3px grey;
+  margin-top: 5%;
 }
 
 .header {
-  padding: 20px;
-  background-color: rgba(240, 230, 140, 0.5) !important;
+  padding: 5px;
+  background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(240, 230, 140));
 }
 .header .navbar {
   font-family: "Source Sans Pro", sans-serif;
@@ -214,6 +259,7 @@ h1 {
 }
 .header a:hover {
   transform: scale(1.1);
+  color: darkgoldenrod;
 }
 .header .navbar-brand {
   width: 10%;
@@ -236,7 +282,7 @@ footer .footer__eslogan {
   font-weight: 600;
   color: black;
   padding: 25px;
-  letter-spacing: 10px;
+  letter-spacing: 7px;
 }
 footer .footer__desarrollo {
   font-family: "Source Sans Pro", sans-serif;
@@ -246,6 +292,10 @@ footer .footer__desarrollo {
   background-color: rgba(47, 79, 79, 0.5);
   padding: 10px;
   letter-spacing: 4px;
+}
+footer .logoempresa {
+  width: 10%;
+  height: 10%;
 }
 
 .form {
@@ -378,9 +428,6 @@ h1 {
   .staff .staff__titulo {
     font-size: 1.1rem;
   }
-  .staff .staff__h2 {
-    font-size: 1.1rem;
-  }
   .staff .staff__name {
     font-size: 1.1rem;
   }
@@ -413,7 +460,6 @@ h1 {
 @media (min-width: 768px) and (max-width: 1400px) {
   .cobertura {
     font-size: 1.3rem;
-    /*no se aplica*/
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 1fr;
