--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -2,9 +2,11 @@ h1 {
     font-size: 2.5rem;
     font-family: $fuente-secundaria;
     font-weight: 600;
-    background-color: 	rgba(255, 127, 80, 0.3);
+    background-color: rgba(185, 119, 14, 0.4);
     color: $color-primario;
     text-align: center;
+    box-shadow: 5px 5px 3px grey;
+    margin-top: 5%;
 }
 
 
