--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,13 +1,14 @@
 
 .header {
-    padding: 20px;
-    background-color: rgba(240, 230, 140, 0.5) !important;
+    padding: 5px;
+    background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(240,230,140,1));
     .navbar {
         font-family: $fuente-primaria;
         letter-spacing: 0.3px;
     }
     a:hover {
         transform: scale(1.1);
+        color:darkgoldenrod;
     }
     .navbar-brand {
         width: 10%;
